adding style, change color

--- a/laprueba.html
+++ b/laprueba.html
@@ -13,7 +13,7 @@
 <body class="elbody">
 <!-------------------EL HEADER----------------------------------------->
 <header>
-    <nav class="navbar-gr navbar-inverse" role="navigation" style="border-color: transparent; color: white; background:none;">
+    <nav class="navbar-gr" role="navigation" >
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -23,14 +23,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span><a id="btn_initial">IMAGEN<img src="" alt=""></a></span>
+                <span><a id="btn_initial">IMAGEN</a></span>
             </div>
-            <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false">
+            <div class="navbar-collapse collapse nav_grace" id="bs-example-navbar-collapse-1" aria-expanded="false">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a id="btn_about_me">About me</a></li>
-                    <li><a id="btn_skills">Skills</a></li>
-                    <li><a id="btn_project">Projects</a></li>
-                    <li><a id="btn_contact_me">Contact me</a></li>
+                    <li><a id="btn_about_me">Sobre Mi</a></li>
+                    <li><a id="btn_skills">Habilidades</a></li>
+                    <li><a id="btn_project">Trabajos</a></li>
+                    <li><a id="btn_contact_me">Contactame</a></li>
                 </ul>
             </div>
         </div>
@@ -149,7 +149,7 @@
                     <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
                         <h2 class="animated fadeInLeft">Skills</h2>
                         <hr class="hor animated fadeInRight">
-                        <div class="logo_programs">
+                        <div class="logo_programs text-center">
                             <h3>Web Developer</h3>
                             <div class="img_logo_skills -html">
                             <img src="images/HTML5_1Color_White.png" alt="html-image" class="img-responsive">
@@ -183,18 +183,12 @@
             <div class="middle-structure -projects" id="projects-image">
                <div class="middle-structure-info projects-image text-left">
                    <h2>Trabajos</h2>
-                <hr class="hor">    
-                <div class="img-projects-github">
-                    <div class="layer1 huella">
-                       <h3 id="name">User Testing 360</h3> 
+                    <hr class="hor">    
+                    <div class="img-projects-github layer">
+                        <h3 id="name">User Testing 360</h3> 
                         <img src="images/User2.png" alt="" class="img-responsive" id="img_pros">
                     </div>
-                    <div class="layer2">
-                       <h3 id="name">Use Testing 360</h3> 
-                        <img src="images/User2.png" alt="" class="img-responsive" id="img_pros">
-                    </div>
-                </div>
-                <button id="btn_project_user" class="btn_press">View Case</button>  
+                    <button id="btn_project_user" class="btn_press">View Case</button>  
                </div>
             </div>
             <!--la estructura de los numeros -->
