--- a/laprueba.html
+++ b/laprueba.html
@@ -177,9 +177,9 @@
 		<div class="container-fluid">
             <div class="middle-structure -projects" id="projects-image">
                <div class="middle-structure-info projects-image text-left">
-                   <h2>Trabajos</h2>
-                    <hr class="hor">    
-                    <div class="img-projects-github layer">
+                   <h2 class="animated fadeInLeft">Trabajos</h2>
+                    <hr class="hor animated fadeInRight">    
+                    <div class="img-projects-github layer fadeInLeft">
                         <h3 id="name">User Testing 360</h3> 
                         <img src="images/User2.png" alt="" class="img-responsive" id="img_pros">
                     </div>
@@ -196,12 +196,12 @@
                        <li>04</li>
                    </ul>
                </div>
-                <div class="middle-structure-info" id="projects">
-                    <ul class="projects list-unstyled">
-                        <li><i class="fa fa-arrow-right"></i><span>Project 1</span></li>    
-                        <li><i class="fa fa-arrow-right"></i><span>Project 2</span></li>    
-                        <li><i class="fa fa-arrow-right"></i><span>Project 3</span></li>    
-                        <li><i class="fa fa-arrow-right"></i><span>Project 4</span></li>    
+                <div class="middle-structure-info">
+                    <ul class="projects list-unstyled" id="projects">
+                        <li><i class="fa fa-arrow-right"></i><span>User testing</span></li>    
+                        <li><i class="fa fa-arrow-right"></i><span>Lyft</span></li>    
+                        <li><i class="fa fa-arrow-right"></i><span>My Portfolio</span></li>    
+                        <li><i class="fa fa-arrow-right"></i><span>Danza Arte</span></li>    
                     </ul>
                 </div>   
             </div>
@@ -232,7 +232,7 @@
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">Nombre</label>
                                 <div class="col-sm-10">
-                                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                                    <input type="password" class="form-control" id="inputPassword3" placeholder="Name">
                                 </div>
                             </div>
                             <div class="form-group">
