--- a/laprueba.html
+++ b/laprueba.html
@@ -10,8 +10,13 @@
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
-<body class="elbody">
+<body class="loaded">
 <!-------------------EL HEADER----------------------------------------->
+<div id="loader-wrapper">
+   <div id="loader"></div>
+   <div class="loader-section section-left"></div>
+   <div class="loader-section section-right"></div>
+</div>
 <header>
     <nav class="navbar-gr" role="navigation" >
         <div class="container-fluid">
