--- a/laprueba.html
+++ b/laprueba.html
@@ -20,11 +20,11 @@
 <header>
     <nav class="navbar-gr" role="navigation" >
         <div class="container-fluid">
-            <div class="navbar-header">
+            <div class="navbar-header navbar-inverse" style="color:#fff; background:transparent;">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                                 data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
+                    <span class="icon-bar"style="color:white;" ></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
@@ -58,7 +58,7 @@
 	</div>
 </section>
 <!----------------ABOUT-ME------ ------------------------------------------->
-<section id="about_me" class="info-about-me">
+<section id="about_me" class="info-about-me section-in  animated fadeInLeft">
 	<div class="content">
 		<div class="container-fluid">
             <div class="middle-structure about-me">
@@ -126,14 +126,13 @@
 	</div>
 </section>
 <!----------------FIRST-SKILLS--------------------------------------------------->
-<section id="skills" class=" info-skills">
+<section id="skills" class=" info-skills animated fadeInLeft">
 	<div class="content">
 		<div class="container-fluid">
            <!-----------------------Languages----------------------------->
             <div class="row text-left languages_skills -skills">
                     <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
                         <h2 class="animated fadeInLeft">Idiomas</h2>
-                        <hr class="hor animated fadeInRight">
                         <div class="idiomas_skills text-center">
                            <h3 id="name">Idiomas</h3>
                             <div>Ingles: Avanzado <img src="images/statue_1.png" alt="" class="img-responsive"> </div>
@@ -144,7 +143,7 @@
                     </div>  
             </div>
             <!-----------------------Web Developer----------------------------->
-            <div class="middle-structure -skills">
+            <div class="middle-structure -skills ">
                 <div class="row middle-structure-info text-left">
                     <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
                         <h2 class="animated fadeInLeft">Skills</h2>
@@ -180,7 +179,7 @@
 <section id="projects" class="info-projects text-center">
 	<div class="content">
 		<div class="container-fluid">
-            <div class="middle-structure -projects" id="projects-image">
+            <div class="middle-structure -projects animated fadeInLeft" id="projects-image">
                <div class="middle-structure-info projects-image text-left">
                    <h2 class="animated fadeInLeft">Trabajos</h2>
                     <hr class="hor animated fadeInRight">    
@@ -192,7 +191,7 @@
                </div>
             </div>
             <!--la estructura de los numeros -->
-            <div class="middle-structure-right ">
+            <div class="middle-structure-right animated fadeInRight">
                <div class="menu-navigation-number middle-structure-info">
                    <ul class="list-unstyled" id="nav_menu_num">
                        <li>01</li>
