adding finished background and

--- a/laprueba.html
+++ b/laprueba.html
@@ -213,12 +213,44 @@
 	</div>
 </section>
 <!----------------FIRST-CONTACT-ME--------------------------------------------------->
-<section id="contact_me" class=" info-contact-me">
+<section id="contact_me">
+   <div class="content">
+       <div class="container-fluid">
+            <div class="middle-structure">
+                <h2 class="animated fadeInLeft">Contáctame</h2>
+                        <hr class="hor animated fadeInRight">
+                        <!------------------ICONS------------------->
+                        <div class="text-center contact-icon animated fadeInRight">
+                            <p>gracefctorres@gmail.com</p>
+                            <ul class="list-unstyled list-inline ">
+                                <li><a href="https://www.linkedin.com/in/grace-clavijo-torres-0403784a/"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://github.com/GraceFT"><i class="fa fa-github"></i></a></li>
+                                <li><a href=""><i class="fa fa-twitch"></i></a></li>
+                            </ul>
+                        </div>
+            </div>
+       </div>
+   </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<section id="contact_me" class=" info-contact-me">
 	<div class="content">
 		<div class="container-fluid -contact">
             <div class="middle-structure">
                 <div class=" row info middle-structure-info text-left">
-                    <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
+                    <div class="col-md-12 col-sm-12 col-xs-12  pull-left">
                         <h2 class="animated fadeInLeft">Contáctame</h2>
                         <hr class="hor animated fadeInRight">
                         <!------------------ICONS------------------->
@@ -232,7 +264,10 @@
                         </div>  
                         <!-------------FORM----------------->
                         <p class="animated fadeInLeft">Enviame un mensaje!</p>
-                        <form class="form-horizontal animated fadeInLeft">
+                    </div>
+                </div>
+            </div>
+                    <form class="form-horizontal animated fadeInLeft">
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">Nombre</label>
                                 <div class="col-sm-10">
@@ -251,11 +286,11 @@
                                     <textarea class="form-control" rows="3" placeholder="Mensaje"></textarea>
                                 </div>
                             </div>
-                        </form> 
+                        </form>
                     </div>
                 </div> 
             </div>
-            <div class="row text-center contact_phrase">
+            <div class=" text-center contact_phrase">
                     <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
                         <p>“Vivo cada dia de mi vida <p> 
                         <p>como si fuera el último, </p>
@@ -263,7 +298,7 @@
                         <p>como si fuese a vivir</p> 
                         <p>para siempre”.<p>
                     </div>  
-            </div>
+            </div>--> 
 		</div>
 	</div>
 </section>
