--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span><a id="btn_initial">IMAGEN</a></span>
+                <span><a id="btn_initial"><img src="images/image_20170130_072429.png" alt="" class="img-responsive logo" style="height:50px; width:50px;"></a></span>
             </div>
             <div class="navbar-collapse collapse nav_grace" id="bs-example-navbar-collapse-1" aria-expanded="false">
                 <ul class="nav navbar-nav navbar-right">
@@ -148,44 +148,55 @@
 	</div>
 </section>
 <!----------------FIRST-PROJECTS--------------------------------------------------->
-<section id="projects" class="info-projects text-center">
+<section id="projects" class="animated fadeInLeft">
 	<div class="content">
 		<div class="container-fluid">
-            <div class="middle-structure -projects" id="projects-image">
-               <div class="middle-structure-info projects-image text-left animated fadeInLeft">
+             <div class="row -info text-center -projects">
                    <h2 class="animated fadeInLeft">Trabajos</h2>
-                    <hr class="hor">    
-                    <div class="img-projects-github layer animated fadeInRight">
-                        <h3 id="name">User Testing 360</h3> 
-                        <img src="images/User2.png" alt="" class="img-responsive" id="img_pros">
+                        <hr>
+                    <div class="col-md-4 col-xs-4 col-sm-4 projects_left">
+                        <ul class="img_projects list-unstyled list-inline layer animated">
+                            <li class="project_1 ">
+                                <a href=""><img src="images/User2.png" alt="html-image" class="img-responsive"></a>
+                            </li>
+                            <li class="project_2 layer">
+                                <a href=""><img src="images/lyft2.png" alt="" class="img-responsive"></a>
+                            </li>
+                        </ul>
                     </div>
-                    <button id="btn_project_user" class="btn_press">View Case</button>  
-               </div>
-            </div>
-            <!--la estructura de los numeros -->
-            <div class="middle-structure-right animated fadeInRight">
-               <div class="menu-navigation-number middle-structure-info">
-                   <ul class="list-unstyled" id="nav_menu_num">
-                       <li>01</li>
-                       <li>02</li>
-                       <li>03</li>
-                       <li>04</li>
-                   </ul>
-               </div>
-                <div class="middle-structure-info" id="projects">
-                    <ul class="projects list-unstyled">
-                        <li><i class="fa fa-arrow-right"></i><span>Project 1</span></li>    
-                        <li><i class="fa fa-arrow-right"></i><span>Project 2</span></li>    
-                        <li><i class="fa fa-arrow-right"></i><span>Project 3</span></li>    
-                        <li><i class="fa fa-arrow-right"></i><span>Project 4</span></li>    
-                    </ul>
-                </div>   
-            </div>
-		</div>
-	</div>
+                    <div class="col-md-4 col-xs-4 col-sm-4 ">
+                        Proyectos realizados con las herraminetas de:
+                        <ul class="list-unstyled">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                            <li>Jquery</li>
+                        </ul>
+                        Y herramientas adcionales:
+                        <ul class="list-unstyled">
+                            <li>Animated.css</li>
+                            <li>Photoshop</li>
+                        </ul>
+                    <div class="layer">
+                        <img src="images/girls2.png" alt="" class="img-responsive">
+                    </div>    
+                    </div>
+                    <div class="col-md-4 col-xs-4 col-sm-4 projects_right" >
+                        <ul class="img_projects list-unstyled list-inline animated">
+                            <li class="project_3 layer">
+                                <a href=""><img src="images/gato-loco2.png" alt="" class="img-responsive"></a>
+                            </li>
+                            <li class="project_4 layer">
+                                <a href=""><img src="images/port-grace3.png" alt="html-image" class="img-responsive"></a>
+                            </li>
+                        </ul>
+                    </div>
+		    </div>
+	    </div>
+    </div>
 </section>
 <!----------------FIRST-CONTACT-ME--------------------------------------------------->
-<section id="contact_me" class=" info-contact-me fadeInLeft">
+<section id="contact_me" class=" info-contact-me animated fadeInLeft">
 	<div class="content">
 		<div class="container-fluid -contact">
             <div class="middle-structure">
@@ -204,11 +215,11 @@
                         </div>  
                         <!-------------FORM----------------->
                         <p class="animated fadeInLeft">Enviame un mensaje!</p>
-                        <form class="form-horizontal animated fadeInLeft">
+                        <form class="form-horizontal animated fadeInRight">
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">Nombre</label>
                                 <div class="col-sm-10">
-                                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                                    <input type="password" class="form-control" id="inputPassword3" placeholder="Nombre">
                                 </div>
                             </div>
                             <div class="form-group">
