adding animation background

--- a/index.html
+++ b/index.html
@@ -36,16 +36,12 @@
         </div>
     </nav>
 </header>
-<!----------------CANVAS--------------------------------------------------->
-<section>
-   <div class="content">
-        
-   </div>
-</section>
+<canvas id="canvas"></canvas>
 <!----------------HOME--------------------------------------------------->
 <section id="welcome view-start initial" class="visible  welcome">
 	<div class="content">
-		<div class="container-fluid">
+	<div class="img"></div>
+		<div class="container">
             <div class="intro-header">
                 <hr class="pull-left vertical">
                 <h1>
@@ -56,7 +52,6 @@
                 </h2>
                        
             </div>
-              <!--<canvas id="divCanvas"></canvas>-->
 		</div>
 	</div>
 </section>
@@ -250,6 +245,7 @@
 		</div>
 	</div>
 </section>
+
 <!----------------------SCRIPT-------------------------------->
 <script
   src="https://code.jquery.com/jquery-1.12.4.min.js"
@@ -260,7 +256,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 <!--<script src="js/projects.js"></script>--> 
-<!--<script src="js/milkyway.js"></script> --stars-->  
+<script src="js/milkyway.js"></script>  
 </body>
 </html>
 
