--- a/index.html
+++ b/index.html
@@ -95,20 +95,6 @@
 <section id="skills" class=" info-skills animated fadeInLeft">
 	<div class="content">
 		<div class="container-fluid">
-           <!-----------------------Languages----------------------------->
-            <div class="row text-left languages_skills -skills">
-                    <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
-                        <h2 class="animated fadeInLeft">Idiomas</h2>
-                        <hr class="hor animated fadeInRight">
-                        <div class="idiomas_skills text-center">
-                           <h3 id="name">Idiomas</h3>
-                            <div>Ingles: Avanzado <img src="images/statue_1.png" alt="" class="img-responsive"> </div>
-                            <div> <span>Mandarin Intermedio <img src="images/mandarin-2.1.png" alt="" class="img-responsive"></span></div>
-                            <div><span>Japones <br>Básico <img src="images/jp-3.png" alt="" class="img-responsive"></span></div>
-                            <div> <span>Portugues Básico<img src="images/br-4.png" alt="" class="img-responsive"></span></div>
-                        </div> 
-                    </div>  
-            </div>
             <!-----------------------Web Developer----------------------------->
             <div class="middle-structure -skills">
                 <div class="row middle-structure-info text-left">
@@ -118,26 +104,40 @@
                         <div class="logo_programs text-center">
                             <h3>Web Developer</h3>
                             <div class="img_logo_skills -html">
-                            <img src="images/HTML5_1Color_White.png" alt="html-image" class="img-responsive">
+                                <img src="images/HTML5_1Color_White.png" alt="html-image" class="img-responsive">
                             </div>
                             <div class="img_logo_skills -css">
-                            <img src="images/css-white.png" alt="" class="img-responsive">
+                                <img src="images/css-white.png" alt="" class="img-responsive">
                             </div>
                             <div class="img_logo_skills -js ">
-                            <img src="images/js2-white.png" alt="" class="img-responsive">
+                                <img src="images/js2-white.png" alt="" class="img-responsive">
                             </div>
                             <div class="img_logo_skills -boot">
-                            <img src="images/bootstraplogo.png" alt="html-image" class="img-responsive">
+                                <img src="images/bootstraplogo.png" alt="html-image" class="img-responsive">
                             </div>
                             <div class="img_logo_skills -jq ">
-                            <img src="images/jquery-white.png" alt="" class="img-responsive">
+                                <img src="images/jquery-white.png" alt="" class="img-responsive">
                             </div>
                             <div class="img_logo_skills -sass">
-                            <img src="images/sass-white.png" alt="html-image" class="img-responsive">
+                                <img src="images/sass-white.png" alt="html-image" class="img-responsive">
                             </div>     
                         </div>         
                     </div>  
                </div>
+            </div>
+            <!-----------------------Languages----------------------------->
+            <div class="row text-left languages_skills -skills">
+                    <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
+                        <h2 class="animated fadeInLeft">Idiomas</h2>
+                        <hr class="hor animated fadeInRight">
+                        <div class="idiomas_skills text-center">
+                           <h3 id="name">Idiomas</h3>
+                            <div><span>Inglés Avanzado</span><img src="images/statue_1.png" alt="" class="img-responsive"> </div>
+                            <div> <span>Mandarin Intermedio <img src="images/mandarin-2.1.png" alt="" class="img-responsive"></span></div>
+                            <div><span>Japones <br>Básico <img src="images/jp-3.png" alt="" class="img-responsive"></span></div>
+                            <div> <span>Portugues Básico<img src="images/br-4.png" alt="" class="img-responsive"></span></div>
+                        </div> 
+                    </div>  
             </div>
 		</div>
 	</div>
@@ -146,12 +146,12 @@
 <section id="projects" class="animated fadeInLeft">
 	<div class="content">
 		<div class="container-fluid">
-             <div class="row -info text-center -projects">
-                   <h2 class="animated fadeInLeft">Trabajos</h2>
-                        <hr>
-                    <div class="col-md-4 col-xs-4 col-sm-4 projects_left">
+             <div class="row text-center -projects _projects_total">
+                   <!--<h2 class="animated fadeInLeft">MisTrabajos</h2>-->
+                    <hr class="linea_projects">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
                         <ul class="img_projects list-unstyled list-inline layer animated">
-                            <li class="project_1 ">
+                            <li class="project_1 layer">
                                 <a href=""><img src="images/User2.png" alt="html-image" class="img-responsive"></a>
                             </li>
                             <li class="project_2 layer">
@@ -159,30 +159,14 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-4 col-xs-4 col-sm-4 ">
-                        Proyectos realizados con las herraminetas de:
-                        <ul class="list-unstyled">
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>Javascript</li>
-                            <li>Jquery</li>
-                        </ul>
-                        Y herramientas adcionales:
-                        <ul class="list-unstyled">
-                            <li>Animated.css</li>
-                            <li>Photoshop</li>
-                        </ul>
-                    <div class="layer">
-                        <img src="images/girls2.png" alt="" class="img-responsive">
-                    </div>    
-                    </div>
-                    <div class="col-md-4 col-xs-4 col-sm-4 projects_right" >
-                        <ul class="img_projects list-unstyled list-inline animated">
-                            <li class="project_3 layer">
-                                <a href=""><img src="images/gato-loco2.png" alt="" class="img-responsive"></a>
+                    
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <ul class="img_projects list-unstyled list-inline layer animated">
+                            <li class="project_1 layer">
+                                <a href=""><img src="images/gato-loco2.png" alt="html-image" class="img-responsive"></a>
                             </li>
-                            <li class="project_4 layer">
-                                <a href=""><img src="images/port-grace3.png" alt="html-image" class="img-responsive"></a>
+                            <li class="project_2 layer">
+                                <a href=""><img src="images/port-grace4.png" alt="" class="img-responsive"></a>
                             </li>
                         </ul>
                     </div>
